--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "browser-sync": "^2.26.7",
     "core-js": "^3.26.1",
     "gulp": "^4.0.2",
-    "webpack": "^4.41.2",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^5.1.4",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
